game-id parameter - less than 7 digits #9
